--- a/notebooks/ingest_data.ipynb
+++ b/notebooks/ingest_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "aba16e0c",
    "metadata": {},
    "outputs": [
@@ -22,21 +22,21 @@
     "from datetime import datetime\n",
     "\n",
     "def prepare_and_upload(csv_path, bucket, in_prefix, script_local, script_s3_prefix):\n",
-    "    # 1) CSV → Parquet\n",
+    "    # make the csv file to parquet \n",
     "    df = pd.read_csv(csv_path)\n",
     "    base = os.path.splitext(os.path.basename(csv_path))[0]\n",
     "    local_parquet = f\"/tmp/{base}-{uuid.uuid4()}.parquet\"\n",
     "    df.to_parquet(local_parquet, index=False)\n",
     "    print(f\"[{datetime.now()}] Wrote local parquet: {local_parquet}\")\n",
     "\n",
-    "    # 2) Upload Parquet\n",
+    "    # Upload Parquet to S3 \n",
     "    s3 = boto3.client(\"s3\")\n",
     "    pq_key = f\"{in_prefix}/{os.path.basename(local_parquet)}\"\n",
     "    s3.upload_file(local_parquet, bucket, pq_key)\n",
     "    in_s3 = f\"s3://{bucket}/{pq_key}\"\n",
     "    print(f\"[{datetime.now()}] Uploaded data to {in_s3}\")\n",
     "\n",
-    "    # 3) Upload classify_batch.py\n",
+    "    # Upload classify_batch.py to S3 to run in Spark job \n",
     "    script_key = f\"{script_s3_prefix}/{os.path.basename(script_local)}\"\n",
     "    s3.upload_file(script_local, bucket, script_key)\n",
     "    script_s3 = f\"s3://{bucket}/{script_key}\"\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a6a34573",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "# Cell 1 — build a CLI‐compatible StepConfig.json\n",
+    "# build a CLI‐compatible StepConfig.json \n",
     "import json, os\n",
     "from datetime import datetime\n",
     "\n",
@@ -104,7 +104,6 @@
     "step = [{\n",
     "  \"Name\": \"BiasClassification\",\n",
     "  \"ActionOnFailure\": \"CONTINUE\",\n",
-    "  # top‐level Jar + Args — *no* HadoopJarStep wrapper here!\n",
     "  \"Jar\": \"command-runner.jar\",\n",
     "  \"Args\": [\n",
     "    \"spark-submit\",\n",
@@ -125,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "d6a97fa8",
    "metadata": {},
    "outputs": [
@@ -142,7 +141,7 @@
     }
    ],
    "source": [
-    "# Cell 2 — submit that JSON to your EMR cluster\n",
+    "# submit that JSON to the EMR cluster for execution \n",
     "!aws emr add-steps \\\n",
     "  --cluster-id j-1IROT086IQ69Y \\\n",
     "  --steps file://step_config.json"
