--- a/notebooks/setup_emr_cluster.ipynb
+++ b/notebooks/setup_emr_cluster.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c77f6212",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,8 @@
     "    --use-default-roles \\\n",
     "    --region us-east-1 \\\n",
     "    --ec2-attributes '{\"KeyName\": \"vockey\"}' \\\n",
-    "    --configurations '[{\"Classification\": \"jupyter-s3-conf\", \"Properties\": {\"s3.persistence.enabled\": \"true\", \"s3.persistence.bucket\": \"truegraph\"}}]'"
+    "    --configurations '[{\"Classification\": \"jupyter-s3-conf\", \"Properties\": {\"s3.persistence.enabled\": \"true\", \"s3.persistence.bucket\": \"truegraph\"}}]'\n",
+    "    --enable-managed-scaling"
    ]
   }
  ],
