--- a/notebooks/ingest_data.ipynb
+++ b/notebooks/ingest_data.ipynb
@@ -17,28 +17,38 @@
     }
    ],
    "source": [
-    "import boto3, uuid, os\n",
+    "import boto3\n",
+    "import uuid\n",
+    "import os\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
+    "from boto3.s3.transfer import TransferConfig, S3Transfer\n",
+    "\n",
+    "transfer_config = TransferConfig(\n",
+    "    max_concurrency=10,\n",
+    "    multipart_threshold=8 * 1024**2,\n",
+    "    multipart_chunksize=8 * 1024**2\n",
+    ")\n",
+    "_s3_client = boto3.client(\"s3\")\n",
+    "_transfer = S3Transfer(_s3_client, transfer_config)\n",
     "\n",
     "def prepare_and_upload(csv_path, bucket, in_prefix, script_local, script_s3_prefix):\n",
     "    # make the csv file to parquet \n",
-    "    df = pd.read_csv(csv_path)\n",
+    "    df = .read_csv(csv_path)\n",
     "    base = os.path.splitext(os.path.basename(csv_path))[0]\n",
     "    local_parquet = f\"/tmp/{base}-{uuid.uuid4()}.parquet\"\n",
     "    df.to_parquet(local_parquet, index=False)\n",
     "    print(f\"[{datetime.now()}] Wrote local parquet: {local_parquet}\")\n",
     "\n",
-    "    # Upload Parquet to S3 \n",
-    "    s3 = boto3.client(\"s3\")\n",
+    "    # Parallel upload Parquet to S3\n",
     "    pq_key = f\"{in_prefix}/{os.path.basename(local_parquet)}\"\n",
-    "    s3.upload_file(local_parquet, bucket, pq_key)\n",
+    "    _transfer.upload_file(local_parquet, bucket, pq_key)\n",
     "    in_s3 = f\"s3://{bucket}/{pq_key}\"\n",
-    "    print(f\"[{datetime.now()}] Uploaded data to {in_s3}\")\n",
+    "    print(f\"[{datetime.now()}] Parallel-uploaded Parquet to {in_s3}\")\n",
     "\n",
-    "    # Upload classify_batch.py to S3 to run in Spark job \n",
+    "    # parallel upload classify_batch.py to S3 to run in Spark job \n",
     "    script_key = f\"{script_s3_prefix}/{os.path.basename(script_local)}\"\n",
-    "    s3.upload_file(script_local, bucket, script_key)\n",
+    "    _transfer.upload_file(script_local, bucket, script_key)\n",
     "    script_s3 = f\"s3://{bucket}/{script_key}\"\n",
     "    print(f\"[{datetime.now()}] Uploaded Spark script to {script_s3}\")\n",
     "\n",
