--- a/notebooks/setup_emr_cluster.ipynb
+++ b/notebooks/setup_emr_cluster.ipynb
@@ -20,16 +20,52 @@
    "source": [
     "#using existing s3 bucket created in last assignment and create a new EMR cluster \n",
     "! aws emr create-cluster \\\n",
-    "    --name \"Spark Cluster\" \\\n",
-    "    --release-label \"emr-6.2.0\" \\\n",
-    "    --applications Name=Hadoop Name=Hive Name=JupyterEnterpriseGateway Name=JupyterHub Name=Livy Name=Pig Name=Spark Name=Tez \\\n",
-    "    --instance-type m5.xlarge \\\n",
-    "    --instance-count 8 \\\n",
-    "    --use-default-roles \\\n",
-    "    --region us-east-1 \\\n",
-    "    --ec2-attributes '{\"KeyName\": \"vockey\"}' \\\n",
-    "    --configurations '[{\"Classification\": \"jupyter-s3-conf\", \"Properties\": {\"s3.persistence.enabled\": \"true\", \"s3.persistence.bucket\": \"truegraph\"}}]'\n",
-    "    --enable-managed-scaling"
+    "  --name \"Spark Cluster\" \\\n",
+    "  --release-label \"emr-6.2.0\" \\\n",
+    "  --applications Name=Hadoop Name=Hive Name=Spark Name=Livy Name=JupyterHub Name=JupyterEnterpriseGateway Name=Pig Name=Tez \\\n",
+    "  --instance-fleets '[\n",
+    "    {\n",
+    "      \"Name\":\"MasterFleet\",\n",
+    "      \"InstanceFleetType\":\"MASTER\",\n",
+    "      \"TargetOnDemandCapacity\":1,\n",
+    "      \"InstanceTypeConfigs\":[{\"InstanceType\":\"m5.xlarge\"}]\n",
+    "    },\n",
+    "    {\n",
+    "      \"Name\":\"CoreFleet\",\n",
+    "      \"InstanceFleetType\":\"CORE\",\n",
+    "      \"TargetOnDemandCapacity\":2,\n",
+    "      \"TargetSpotCapacity\":6,\n",
+    "      \"InstanceTypeConfigs\":[{\"InstanceType\":\"m5.xlarge\",\"WeightedCapacity\":1}]\n",
+    "    }\n",
+    "  ]' \\\n",
+    "  --use-default-roles \\\n",
+    "  --region us-east-1 \\\n",
+    "  --ec2-attributes '{\"KeyName\":\"vockey\"}' \\\n",
+    "  --configurations '[\n",
+    "    {\n",
+    "      \"Classification\":\"spark-defaults\",\n",
+    "      \"Properties\":{\n",
+    "        \"spark.hadoop.fs.s3a.fast.upload\":\"true\",\n",
+    "        \"spark.hadoop.fs.s3a.connection.maximum\":\"100\",\n",
+    "        \"spark.dynamicAllocation.enabled\":\"true\",\n",
+    "        \"spark.dynamicAllocation.minExecutors\":\"2\",\n",
+    "        \"spark.dynamicAllocation.maxExecutors\":\"20\",\n",
+    "        \"spark.sql.adaptive.enabled\":\"true\",\n",
+    "        \"spark.sql.shuffle.partitions\":\"200\",\n",
+    "        \"s3.persistence.enabled\": \"true\", \n",
+    "        \"s3.persistence.bucket\": \"truegraph\"\n",
+    "      }\n",
+    "    }\n",
+    "  ]' \\\n",
+    "  --enable-managed-scaling \\\n",
+    "  --managed-scaling-policy '{\n",
+    "    \"ComputeLimits\":{\n",
+    "      \"UnitType\":\"InstanceFleetUnits\",\n",
+    "      \"MinimumCapacityUnits\":4,\n",
+    "      \"MaximumCapacityUnits\":16,\n",
+    "      \"MaximumOnDemandCapacityUnits\":4\n",
+    "    }\n",
+    "  }'"
    ]
   }
  ],
