--- a/notebooks/ingest_data.ipynb
+++ b/notebooks/ingest_data.ipynb
@@ -7,61 +7,130 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/05/29 13:34:45 WARN Utils: Your hostname, Real-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 10.150.150.155 instead (on interface en0)\n",
+      "25/05/29 13:34:45 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "Ivy Default Cache set to: /Users/apple/.ivy2/cache\n",
+      "The jars for the packages stored in: /Users/apple/.ivy2/jars\n",
+      "org.apache.hadoop#hadoop-aws added as a dependency\n",
+      "com.amazonaws#aws-java-sdk-bundle added as a dependency\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-0bef3968-be5e-4c63-8972-34e1a2c1a828;1.0\n",
+      "\tconfs: [default]\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-05-27 18:21:36.198249] Wrote local parquet: /tmp/data_test-348a6954-1cf8-45af-a8c2-5e7f33691619.parquet\n",
-      "[2025-05-27 18:21:36.402930] Uploaded data to s3://realunique/incoming/parquet/data_test-348a6954-1cf8-45af-a8c2-5e7f33691619.parquet\n",
-      "[2025-05-27 18:21:36.474431] Uploaded Spark script to s3://realunique/scripts/classify_batch.py\n"
+      ":: loading settings :: url = jar:file:/opt/anaconda3/lib/python3.12/site-packages/pyspark/jars/ivy-2.5.1.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\tfound org.apache.hadoop#hadoop-aws;3.3.4 in central\n",
+      "\tfound com.amazonaws#aws-java-sdk-bundle;1.12.262 in central\n",
+      "\tfound org.wildfly.openssl#wildfly-openssl;1.0.7.Final in central\n",
+      ":: resolution report :: resolve 126ms :: artifacts dl 5ms\n",
+      "\t:: modules in use:\n",
+      "\tcom.amazonaws#aws-java-sdk-bundle;1.12.262 from central in [default]\n",
+      "\torg.apache.hadoop#hadoop-aws;3.3.4 from central in [default]\n",
+      "\torg.wildfly.openssl#wildfly-openssl;1.0.7.Final from central in [default]\n",
+      "\t:: evicted modules:\n",
+      "\tcom.amazonaws#aws-java-sdk-bundle;1.12.256 by [com.amazonaws#aws-java-sdk-bundle;1.12.262] in [default]\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|                  |            modules            ||   artifacts   |\n",
+      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|      default     |   4   |   0   |   0   |   1   ||   3   |   0   |\n",
+      "\t---------------------------------------------------------------------\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-0bef3968-be5e-4c63-8972-34e1a2c1a828\n",
+      "\tconfs: [default]\n",
+      "\t0 artifacts copied, 3 already retrieved (0kB/3ms)\n",
+      "25/05/29 13:34:46 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
      ]
     }
    ],
    "source": [
-    "import boto3\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark import SparkFiles\n",
     "import uuid\n",
     "import os\n",
-    "import pandas as pd\n",
     "from datetime import datetime\n",
-    "from boto3.s3.transfer import TransferConfig, S3Transfer\n",
     "\n",
-    "transfer_config = TransferConfig(\n",
-    "    max_concurrency=10,\n",
-    "    multipart_threshold=8 * 1024**2,\n",
-    "    multipart_chunksize=8 * 1024**2\n",
-    ")\n",
-    "_s3_client = boto3.client(\"s3\")\n",
-    "_transfer = S3Transfer(_s3_client, transfer_config)\n",
-    "\n",
+    "# build the spark session to upload to S3 \n",
+    "spark = (\n",
+    "    SparkSession.builder\n",
+    "        .appName(\"UploadViaSpark\")\n",
+    "        # bring in the S3A connector JARs\n",
+    "        .config(\n",
+    "            \"spark.jars.packages\",\n",
+    "            \"org.apache.hadoop:hadoop-aws:3.3.4,com.amazonaws:aws-java-sdk-bundle:1.12.256\"\n",
+    "        )\n",
+    "        # set the S3A filesystem\n",
+    "        .config(\n",
+    "            \"spark.hadoop.fs.s3a.aws.credentials.provider\",\n",
+    "            \"com.amazonaws.auth.DefaultAWSCredentialsProviderChain\"\n",
+    "        )\n",
+    "        # tuning for parallel/multipart\n",
+    "        .config(\"spark.hadoop.fs.s3a.connection.maximum\", \"10\")\n",
+    "        .config(\"spark.hadoop.fs.s3a.multipart.size\",     str(8 * 1024**2))\n",
+    "        .config(\"spark.hadoop.fs.s3a.multipart.threshold\",str(8 * 1024**2))\n",
+    "        .getOrCreate()\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "911d7039",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-05-29 13:37:55.273511] Wrote Parquet to s3a://realunique/incoming/parquet/data_test-e92fa965-64ff-47fd-8f42-0b0c9ba5eff8.parquet\n",
+      "Done. s3a://realunique/incoming/parquet/data_test-e92fa965-64ff-47fd-8f42-0b0c9ba5eff8.parquet\n"
+     ]
+    }
+   ],
+   "source": [
     "def prepare_and_upload(csv_path, bucket, in_prefix, script_local, script_s3_prefix):\n",
-    "    # make the csv file to parquet \n",
-    "    df = .read_csv(csv_path)\n",
+    "    # read csv and change to parquet and upload to S3\n",
+    "    df = spark.read.option(\"header\", True).csv(csv_path)\n",
     "    base = os.path.splitext(os.path.basename(csv_path))[0]\n",
-    "    local_parquet = f\"/tmp/{base}-{uuid.uuid4()}.parquet\"\n",
-    "    df.to_parquet(local_parquet, index=False)\n",
-    "    print(f\"[{datetime.now()}] Wrote local parquet: {local_parquet}\")\n",
+    "    parquet_s3_path = f\"s3a://{bucket}/{in_prefix}/{base}-{uuid.uuid4()}.parquet\"\n",
+    "    \n",
+    "    df.write \\\n",
+    "      .mode(\"overwrite\") \\\n",
+    "      .parquet(parquet_s3_path)\n",
+    "    print(f\"[{datetime.now()}] Wrote Parquet to {parquet_s3_path}\")\n",
+    "    \n",
+    "    return parquet_s3_path\n",
     "\n",
-    "    # Parallel upload Parquet to S3\n",
-    "    pq_key = f\"{in_prefix}/{os.path.basename(local_parquet)}\"\n",
-    "    _transfer.upload_file(local_parquet, bucket, pq_key)\n",
-    "    in_s3 = f\"s3://{bucket}/{pq_key}\"\n",
-    "    print(f\"[{datetime.now()}] Parallel-uploaded Parquet to {in_s3}\")\n",
-    "\n",
-    "    # parallel upload classify_batch.py to S3 to run in Spark job \n",
-    "    script_key = f\"{script_s3_prefix}/{os.path.basename(script_local)}\"\n",
-    "    _transfer.upload_file(script_local, bucket, script_key)\n",
-    "    script_s3 = f\"s3://{bucket}/{script_key}\"\n",
-    "    print(f\"[{datetime.now()}] Uploaded Spark script to {script_s3}\")\n",
-    "\n",
-    "    return in_s3, script_s3\n",
-    "\n",
-    "# Example usage:\n",
-    "in_s3_path, script_s3_path = prepare_and_upload(\n",
-    "    csv_path=\"data_test.csv\",\n",
+    "# ── Example usage ──\n",
+    "in_s3_path = prepare_and_upload(\n",
+    "    csv_path=\"../data/data_test.csv\",\n",
     "    bucket=\"realunique\",\n",
     "    in_prefix=\"incoming/parquet\",\n",
     "    script_local=\"classify_batch.py\",\n",
     "    script_s3_prefix=\"scripts\"\n",
-    ")"
+    ")\n",
+    "\n",
+    "print(\"Done.\", in_s3_path)"
    ]
   },
   {
@@ -174,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
